# situation-report

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cleanup_situations.sql  docker-compose.yml
backend/: Cargo.toml
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs  models.rs  queries.rs
backend/crates/embeddings/: Cargo.toml
backend/crates/embeddings/src/: cache.rs  compose.rs  lib.rs  model.rs  store.rs
backend/crates/intel/: Cargo.toml
backend/crates/intel/src/: analyze.rs  budget.rs  client.rs  enrich.rs  gemini.rs  lib.rs  llm.rs  llm_backend.rs  narrative.rs  ollama.rs  prompts.rs  retry.rs  search.rs  titles.rs  types.rs
backend/crates/pipeline/: Cargo.toml
backend/crates/pipeline/src/: airspace.rs  alerts.rs  core.rs  lib.rs  pipeline.rs  types.rs  window.rs
backend/crates/pipeline/src/entity_graph/: graph.rs  mod.rs  model.rs  queries.rs  resolve.rs  state.rs
backend/crates/pipeline/src/replay/: golden.rs  harness.rs  mod.rs  types.rs
backend/crates/pipeline/src/rules/: apt_staging.rs  confirmed_strike.rs  conflict_thermal.rs  coordinated_shutdown.rs  gps_military.rs  infra_attack.rs  maritime_enforcement.rs  military_strike.rs  military_surge.rs  mod.rs  osint_strike.rs
backend/crates/pipeline/src/situation_graph/: dto.rs  lifecycle.rs  merge.rs  mod.rs  percentile.rs  scoring.rs
backend/crates/pipeline/tests/: rules_tests.rs
backend/crates/replay/: Cargo.toml
backend/crates/replay/src/: main.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: auth.rs  error.rs  main.rs  state.rs  static_files.rs  validate.rs
backend/crates/server/src/routes/: alerts.rs  analytics.rs  config.rs  entities.rs  events.rs  incidents.rs  intel.rs  mod.rs  pipeline.rs  positions.rs  replay.rs  reports.rs  satellites.rs  search.rs  shodan.rs  situations.rs  sources.rs  sse.rs  translate.rs  ws.rs
backend/crates/sources/: Cargo.toml
backend/crates/sources/src/: acled.rs  adsb.rs  aircraft_db.rs  airplaneslive.rs  ais.rs  bgp.rs  bluesky.rs  certstream.rs  cloudflare.rs  common.rs  copernicus.rs  firms.rs  gdacs.rs  gdelt.rs  gdelt_geo.rs  geoconfirmed.rs  gfw.rs  gpsjam.rs  imb.rs  ioda.rs  lib.rs  notam.rs  nuclear.rs  ooni.rs  opensky.rs  otx.rs  rate_limit.rs  registry.rs  reliefweb.rs  rss_news.rs  shodan.rs  telegram.rs  ukmto.rs  ukmto_warnings.rs  usgs.rs
backend/crates/sources/src/db/: queries.rs
backend/crates/telegram-auth/: Cargo.toml
backend/crates/telegram-auth/src/: main.rs
backend/crates/types/: Cargo.toml
backend/crates/types/src/: event_type.rs  evidence_role.rs  lib.rs  severity.rs  situation_phase.rs  source_type.rs
backend/crates/types/tests/: consistency.rs
backend/data/fixtures/: enriched_news_db.json  firms_events.json  geoconfirmed_events.json  military_flight_events.json  notam_events.json  positions.json  situations.json
backend/migrations/: 001_initial.sql  002_timescaledb_postgis.sql  003_realtime_aggregates.sql  004_pgvector_embeddings.sql  005_entity_graph.sql  006_budget_tracking.sql  007_search_history.sql  008_fix_event_entities.sql  009_position_history.sql  010_situation_centroids.sql  011_incidents.sql  012_disable_dead_sources.sql  013_reset_source_failures.sql  014_gemini_monthly_budget.sql  015_truncate_situations.sql  016_reset_source_health.sql  017_situation_summaries.sql  018_situation_timeline.sql  019_truncate_situations_v2.sql  020_truncate_situations_v3.sql
backend/replay-data/: golden.json
backend/scripts/: fetch_bases.py  setup_backups.sh  setup_tiered_storage.sql
docs/: CONSOLIDATION_ANALYSIS_20260315.md  DATA_GROWTH_PROJECTION.md  FINDINGS_20260313.md  MAGIC_NUMBERS_AUDIT.md  MAP_OPTIMIZATION.md  MONITORING_20260306.md  PAID_API_RESEARCH.md  PLAN_BIG_PUSH_20260310.md  SITUATION_MONITOR_20260307.md  SITUATION_MONITOR_R4_20260307.md  SITUATION_REBUILD_MONITOR.md  SOURCES_REFERENCE.md  STORAGE_AND_TRACKING_PLAN.md  STORAGE_OPTIMIZATION.md  TRACKING_20260313.md
docs/_archive/: ADDITIONAL_SOURCES.md  ADDITIONAL_SOURCES_2.md  BACKLOG.md  CURRENT_PIPELINE_RESEARCH.md  DB.md  DEPLOYMENT_MONITORING.md  DEPLOYMENT_MONITOR_20260305.md  DEPLOYMENT_TIMELINE.md  DEPLOY_MONITOR_20260304.md  EMBEEDINGS_AND_DBS_RESEARCH.md  FLIGHT_TRACKING.md  INTEL_RESEARCH.md  MONITORING_2026-03-05.md  MONITORING_2026-03-06.md  MONITORING_2026-03-06_R2.md  NOTAM_APIS.md  PIPELINE_HEALTH_BACKLOG.md  POSITION_PATTERNS.md  SHODAN_EDU_PLAN.md  SHODAN_RESEARCH.md  SITREP_COMPARISON_RESEARCH.md  SITREP_ME.md  SITUATION_AUDIT_2026-03-05.md  SOURCES.md  SOURCE_VALUE_AUDIT.md  TELEGRAM_SOURCES.md  UI_UX.md  hw-inventory.sh
frontend/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/components/layout/: CommandLayout.svelte
frontend/src/lib/components/panels/: ActivityTimeline.svelte  AlertsPanel.svelte  DataFlowPanel.svelte  DomainTabs.svelte  EventDetailDrawer.svelte  IncidentDetailDrawer.svelte  IntelBrief.svelte  MapPanel.svelte  NewsPanel.svelte  PositionDetailPane.svelte  SearchPanel.svelte  SituationDrawer.svelte  SituationReportsPanel.svelte  SituationRow.svelte  SituationTimeline.svelte
frontend/src/lib/components/shared/: AlertBanner.svelte  ConnectionStatus.svelte  DataFreshness.svelte  DigestOverlay.svelte  (+5 more)
frontend/src/lib/config/: colors.ts  map-layers.ts  regions.ts
frontend/src/lib/services/: aircraft-types.ts  api.ts  event-display.ts  markdown.ts  outlinks.ts  position-interpolator.ts  satellites.svelte.ts  sse.ts  vessel-types.ts  ws.ts
frontend/src/lib/stores/: clock.svelte.ts  digest.svelte.ts  events.svelte.ts  map.svelte.ts  situations.svelte.ts  sources.svelte.ts  theme.svelte.ts  ui.svelte.ts
frontend/src/lib/types/: events.ts  situations.ts  sources.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/graph/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/static/data/: military-bases.geojson
