[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/config",
    "crates/db",
    "crates/server",
    "crates/sources",
    "crates/pipeline",
    "crates/intel",
    "crates/embeddings",
    "crates/telegram-auth",
    "crates/replay",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
description = "Real-time OSINT monitoring and correlation platform"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/situationreport"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
pgvector = { version = "0.4", features = ["sqlx"] }
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
petgraph = "0.7"
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }
unicode-normalization = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
