[package]
name = "sr-embeddings"
edition.workspace = true
version.workspace = true

[dependencies]
sr-types = { path = "../types" }
sr-sources = { path = "../sources" }
fastembed.workspace = true
ort.workspace = true
pgvector.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
indexmap.workspace = true
