[package]
name = "sr-replay"
edition.workspace = true
version.workspace = true

[[bin]]
name = "sr-replay"
path = "src/main.rs"

[dependencies]
sr-pipeline = { path = "../pipeline" }
sr-sources = { path = "../sources" }
sr-config = { path = "../config" }
sr-types = { path = "../types" }
sr-intel = { path = "../intel" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sqlx.workspace = true
clap.workspace = true
