[package]
name = "sr-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "sr-server"
path = "src/main.rs"

[dependencies]
sr-config = { path = "../config" }
sr-db = { path = "../db" }
sr-sources = { path = "../sources" }
sr-types = { path = "../types" }
sr-pipeline = { path = "../pipeline" }
sr-intel = { path = "../intel" }
sr-embeddings = { path = "../embeddings" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
sqlx.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
reqwest.workspace = true
dotenvy = "0.15"
uuid.workspace = true
